--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,6 +61,37 @@ body {
     border: solid 3px rgb(182, 182, 182) !important;
 }
 
+.selected-null--active {
+    min-width: 50px;
+    height: 100%;
+    z-index: 100;
+    padding: 5px;
+    border: solid 3px rgb(182, 182, 182) !important;
+    background: rgba(136, 136, 136, 0.225) !important;
+}
+
+.selected-null {
+    min-width: 50px;
+    height: 100%;
+    z-index: 100;
+    padding: 5px;
+    border: solid 3px gray !important;
+}
+
+.block {
+    width: 17%;
+    position: absolute;
+    bottom: 6%;
+    right: 16%;
+}
+
+.block_move {
+    width: 17%;
+    bottom: 12%;
+    right: 24%;
+    transform: rotate(0deg);
+}
+
 .hand_steve {
     width: 17%;
     position: absolute;
